--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,27 @@
 <Project>
+
   <PropertyGroup>
     <ReleaseVersion>2.3.0.0</ReleaseVersion>
     <RepositoryUrl>https://github.com/mono/taglib-sharp</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <TaglibSharpTargetFramework>netstandard2.0</TaglibSharpTargetFramework>
+
+    <!-- Make sure to update Directory.Build.targets too! -->
+    <ExeTargetFrameworks>net462;netcoreapp3.1</ExeTargetFrameworks>
+    <LibTargetFrameworks>net462;netstandard2.0</LibTargetFrameworks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net462'">
+    <DebugType>full</DebugType>
+  </PropertyGroup>
+
+  <!-- Allow building net framework using mono -->
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net4')) and '$(OS)' == 'Unix'">
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+
 </Project>
