--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -19,7 +19,12 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.404
+
+    - name: Clean
+      run: dotnet clean --configuration Release && dotnet nuget locals all --clear
+
     - name: Build with dotnet
       run: dotnet build --configuration Release
+
     - name: Run unit tests
       run: dotnet test --verbosity normal
