Rename master branch to main

--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -3,10 +3,10 @@ name: macOS
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 
 jobs:
