--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,22 +6,9 @@
     <RepositoryType>git</RepositoryType>
 
     <!-- Make sure to update Directory.Build.targets too! -->
-    <ExeTargetFrameworks>net462;netcoreapp3.1</ExeTargetFrameworks>
-    <LibTargetFrameworks>net462;netstandard2.0</LibTargetFrameworks>
+    <ExeTargetFrameworks>net6.0;net472</ExeTargetFrameworks>
+    <LibTargetFrameworks>net6.0;netstandard2.0</LibTargetFrameworks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)' == 'net462'">
-    <DebugType>full</DebugType>
-  </PropertyGroup>
-
-  <!-- Allow building net framework using mono -->
-  <ItemGroup Condition="$(TargetFramework.StartsWith('net4')) and '$(OS)' == 'Unix'">
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-
 
 </Project>
