Move net6 to net8 and enable a couple build items
This moves to net8 the latest LTS version from Microsoft.

Also enables:
* NETAnalyzers
* Deterministic builds
* Global TreatWarningsAsErrors

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,9 +6,15 @@
     <RepositoryType>git</RepositoryType>
 
     <!-- Make sure to update Directory.Build.targets too! -->
-    <ExeTargetFrameworks>net6.0;net472</ExeTargetFrameworks>
-    <LibTargetFrameworks>net6.0;netstandard2.0</LibTargetFrameworks>
+    <ExeTargetFrameworks>net8.0;net472</ExeTargetFrameworks>
+    <LibTargetFrameworks>net8.0;netstandard2.0</LibTargetFrameworks>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <LangVersion>latest</LangVersion>
+    <Deterministic>true</Deterministic>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
 </Project>
