--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.userosscache
 *.sln.docstates
 .idea
+src/TaglibSharp.Tests/samples
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
