--- a/tests/TaglibSharp.Tests/TaglibSharp.Tests.csproj
+++ b/tests/TaglibSharp.Tests/TaglibSharp.Tests.csproj
@@ -2,6 +2,9 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>$(ExeTargetFrameworks)</TargetFrameworks>
+		<EnableMSTestRunner>true</EnableMSTestRunner>
+		<OutputType>Exe</OutputType>
+		<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
