--- a/tests/TaglibSharp.Tests/TaglibSharp.Tests.csproj
+++ b/tests/TaglibSharp.Tests/TaglibSharp.Tests.csproj
@@ -7,6 +7,20 @@
 		<OutputType>Exe</OutputType>
 		<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
 		<IsPackable>false</IsPackable>
+		<CollectCoverage>true</CollectCoverage>
+		<CoverletOutputFormat>opencover</CoverletOutputFormat>
+		<CoverletOutput>../coverage/</CoverletOutput>
+		<Threshold>80</Threshold>
+		<ThresholdType>line</ThresholdType>
+		<ThresholdStat>total</ThresholdStat>
+		<!-- Enable nullable reference types for better test safety -->
+		<Nullable>enable</Nullable>
+		<!-- Enable latest language features -->
+		<LangVersion>latest</LangVersion>
+		<!-- Enhanced coverage collection -->
+		<Include>[TaglibSharp]*</Include>
+		<Exclude>[TaglibSharp.Tests]*</Exclude>
+		<ExcludeByAttribute>Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute</ExcludeByAttribute>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -14,13 +28,66 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<!-- Core Testing - MSTest Meta Package (Latest) -->
 		<PackageReference Include="MSTest" />
+		<PackageReference Include="FluentAssertions" Version="6.12.0" />
+		<PackageReference Include="AutoFixture" Version="4.18.1" />
+		<PackageReference Include="AutoFixture.AutoMoq" Version="4.18.1" />
+		<PackageReference Include="Moq" Version="4.20.70" />
+
+		<!-- Property-based Testing -->
+		<PackageReference Include="FsCheck" Version="2.16.6" />
+		<PackageReference Include="FsCheck.Xunit" Version="2.16.6" />
+
+		<!-- Performance Testing -->
+		<PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+		<PackageReference Include="BenchmarkDotNet.Annotations" Version="0.13.12" />
+
+		<!-- Code Coverage - Enhanced -->
+		<PackageReference Include="coverlet.collector" Version="6.0.0" />
+		<PackageReference Include="coverlet.msbuild" Version="6.0.0" />
+		<PackageReference Include="Microsoft.CodeCoverage" Version="17.8.0" />
+
+		<!-- Coverage Reporting -->
+		<PackageReference Include="ReportGenerator" Version="5.2.0" />
+
+		<!-- Test Data Generation -->
+		<PackageReference Include="Bogus" Version="35.4.0" />
+
+		<!-- File System Testing -->
+		<PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="21.0.2" />
+
+		<!-- Image Testing -->
 		<PackageReference Include="SixLabors.ImageSharp" />
+
+		<!-- Snapshot Testing for Complex Outputs -->
+		<PackageReference Include="Verify.MSTest" Version="24.2.0" />
+
+		<!-- Async Testing Utilities -->
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
+
+		<!-- Memory Testing -->
+		<PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.1.2" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Using Include="TagLib" />
 		<Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
+		<Using Include="FluentAssertions" />
+		<Using Include="AutoFixture" />
+		<Using Include="Moq" />
+		<Using Include="System.Text.Json" />
+		<Using Include="System.Threading.Tasks" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="TestData/**/*" CopyToOutputDirectory="PreserveNewest" />
+		<EmbeddedResource Include="TestData/**/*" />
+	</ItemGroup>
+
+	<!-- MSTest Runner Configuration -->
+	<ItemGroup>
+		<MSTestRunnerConfiguration Include="MSTest.runsettings" />
 	</ItemGroup>
 
 </Project>
